# lexory

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  THIRD_PARTY_LICENSES.txt  alembic.ini  app.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0009_exercises_table.py  (+8 more)
api/: routes.py
assets/: languagetool_rule_ids_en_all.json  languagetool_rule_ids_en_grammar.json  languagetool_rule_ids_en_style.json  languagetool_rule_inventory_manifest.json  languagetool_to_mistaketype.json  mistake_logic_vocab.json
batch/: learning_summaries.py  mistake_type_stats.py
core/: activity_timeline.py  exercise_rotation.py  exercises.py  lesson_artifact.py  mistake_type_stats.py  models.py
llm/: __init__.py  base.py  factory.py  groq_adapter.py  ollama_adapter.py
rag/: approach_selection.py  embedder.py  exercise_generator.py  mistake_exclusion.py  service.py
scripts/: classify_unmapped_rules.py  extract_languagetool_rule_ids.py  recompute_mistake_type_stats.py  subdivide_confusables.py
storage/: __init__.py  database.py  example_imprints.py  models.py  repositories.py
tests/: __init__.py  test_activity_timeline.py  test_approach_selection.py  test_deduplication.py  test_exercise_answer.py  test_exercise_generator.py  test_exercise_rotation.py  test_exercises.py  test_extract_languagetool_rule_ids.py  test_languagetool_pipeline.py  test_lesson_artifact_metadata.py  test_lesson_construction.py  test_llm_factory.py  test_mistake_type_stats.py  test_rule_id_normalizer.py  test_supplemental.py
vectorstore/: qdrant_client.py
(+11 files in other folders)
