[project]
name = "lexory"
version = "0.1.0"
description = "Minimal RAG-based learning backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "qdrant-client>=1.9.0",
    "sqlalchemy>=2.0.0",
    "polars>=0.19.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "uvicorn>=0.24.0",
    "language-tool-python>=3.1.0",
    "numpy>=2.3,<2.4",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

# CPU-only PyTorch for smaller Docker builds. Remove for local GPU dev.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes (real bugs)
    "I",  # import sorting
]
fixable = ["ALL"]
